# final-project

./: README.md  final-project.ipynb  gus.py  hannah.py
final-project/: pyproject.toml
final-project/documentation/docs/: Matt.md
final-project/final_project/: Final-Project_Gus.ipynb  app.py  calculateAverages.py  dashboard.py  data_cleaning.py  data_cleaning_Matt.py  getQBAvgStats.py  getQbStats.py  getQbStatsApi.py  lrmodel.py  plots.py  salaryData.csv  spotracscrape.py  statisticalAnalysis.py  test.py
final-project/final_project/data/: avgStats.csv  qbStats.csv  salaryData.csv
final-project/final_project/hannahFiles/: college.py
final-project/final_project/mattFiles/: data_cleaning.py
final-project/final_project/ramFiles/: calculateAverages.py  getAllQBAvgStats.py  getQBAvgStats.py  getQbStats.py  getQbStatsApi.py  lrmodel.py  plots.py  spotracscrape.py  statisticalAnalysis.py
final-project/final_project/ramFiles/data/: avgStats.csv  qbStats.csv
final-project/tests/: test_final_project.py
