[tool.poetry]
name = "final-project"
version = "0.1.0"
description = ""
authors = ["mattm0606 <matt.m@wustl.edu>"]

[tool.poetry.dependencies]
python = "^3.10"
mkdocs = "^1.3.0"
dash = "^2.3.1"
sportsreference = "^0.5.2"
pandas = "^1.4.2"
numpy = "^1.22.3"
matplotlib = "^3.5.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
